[feat] 完成FTP文件去重机制和系统集成测试
- 新增processed_file表和ProcessedFileService去重服务
- FtpScanJob集成去重检查，防止重复扫描
- TaskController手动触发集成去重检查
- 完成TableCreatorService自动建表机制
- 完成CustomIdGenerator自定义ID生成器
- 修复ExcelUtil日期处理问题
- 完成Phase 6系统集成测试(100%通过)
- E2E端到端验证(22/22测试通过)
- 新增测试文档和报告

关联文档: CLAUDE.md